--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule
-    </title>
+    <title>Schedule</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -40,6 +39,7 @@
             <td>8:00 AM - 10:00 AM</td>
             <td>ENG 120</td>
         </tr>
+        </table>
 
 </body>
 </html>
